--- a/style.css
+++ b/style.css
@@ -29,54 +29,53 @@ body {
   margin-top: 41px;
 }
 
-.card__id {
+.card__code {
   display: inline-block;
   font-size: 11px;
   line-height: 13px;
   margin-top: 5px;
 }
 
-.reviews-box {
+.card__rating {
   display: flex;
   justify-content: space-between;
   margin-top: 14px;
 }
 
-.stars {
+.card__stars {
   display: flex;
 }
 
-.star {
-  background: url("images/star.svg") no-repeat 15px;
-  background-position: center;
+.card__star {
+  background: url("images/star.svg") no-repeat center;
   height: 15px;
   width: 15px;
   margin-right: 4px;
 }
 
-.star:nth-child(-n+4) {
+.card__star:nth-child(-n+4) {
   background-image: url("images/star-active.svg");
 }
 
-.review-box--reviews {
+.card__reviews {
   font-size: 11px;
   line-height: 13px;
   align-self: center;
 }
 
-.price-box {
+.card__prices {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-top: 20px;
 }
 
-.price-box__name {
+.card__name {
   font-size: 11px;
   line-height: 13px;
 }
 
-.price-box__price {
+.card__price {
   font-weight: bold;
   font-size: 16px;
   line-height: 19px;
@@ -97,6 +96,7 @@ body {
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .card__button:hover {
